apollo-federation/src/connectors/validation/snapshots/validation_tests@keys_and_entities__invalid__arg_is_object_but_field_is_not.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/keys_and_entities/invalid/arg_is_object_but_field_is_not.graphql
---
[
    Message {
        code: EntityResolverArgumentMismatch,
        message: "`Query.product(id:)` is of type `ProductInput`, but must match `Product.id` of type `ID` because `entity` is `true`.",
        locations: [
            6:11..6:28,
            10:7..10:19,
        ],
    },
]
