apollo-federation/src/connectors/validation/snapshots/validation_tests@keys_and_entities__invalid__entity_true_on_non_root_field.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/connectors/validation/test_data/keys_and_entities/invalid/entity_true_on_non_root_field.graphql
---
[
    Message {
        code: EntityNotOnRootQuery,
        message: "`@connect(entity: true)` on `User.favoriteColor` is invalid. Entity resolvers can only be declared on root `Query` fields.",
        locations: [
            19:7..19:19,
        ],
    },
]
